[mod] 链路补齐，sreach增加厚度
